# ovh-lab-01

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
eval/: golden_set.yaml  run_eval.py
scripts/: smoke_test.py
src/: chunker.py  config.py  ingest.py  loader.py  ovh_client.py  pipeline.py  retriever.py
